--- a/public/css/style.css
+++ b/public/css/style.css
@@ -370,7 +370,7 @@ ol {
 }
 
 .header__menu ul li:last-child {
-	margin-right: 0;
+	margin-left: 0;
 }
 
 .header__menu ul li .dropdown {
@@ -1745,7 +1745,7 @@ ol {
 }
 
 .quantity {
-	float: left;
+	float: right;
 	margin-right: 10px;
 	margin-bottom: 10px;
 }
@@ -1754,7 +1754,7 @@ ol {
 	font-size: 14px;
 	color: #111111;
 	font-weight: 600;
-	float: left;
+	float: right;
 	margin-top: 14px;
 	margin-right: 15px;
 }
@@ -1803,9 +1803,10 @@ ol {
 	text-transform: uppercase;
 	padding: 14px 30px 15px;
 	border-radius: 50px;
-	float: left;
+	float: right;
 	margin-right: 10px;
 	margin-bottom: 10px;
+	border: #fff;
 }
 
 .product__details__button ul {
@@ -1858,7 +1859,7 @@ ol {
 	font-weight: 600;
 	color: #111111;
 	width: 150px;
-	float: left;
+	float: right;
 }
 
 .product__details__widget ul li .stock__checkbox {
@@ -1867,7 +1868,6 @@ ol {
 
 .product__details__widget ul li .stock__checkbox label {
 	display: block;
-	padding-left: 20px;
 	font-size: 14px;
 	color: #666666;
 	position: relative;
@@ -1900,7 +1900,7 @@ ol {
 
 .product__details__widget ul li .stock__checkbox label .checkmark:after {
 	position: absolute;
-	left: 0px;
+	right: 0px;
 	top: -2px;
 	width: 11px;
 	height: 5px;
@@ -1926,7 +1926,7 @@ ol {
 }
 
 .product__details__widget ul li .color__checkbox label:last-child {
-	margin-right: 0;
+	margin-left: 0;
 }
 
 .product__details__widget ul li .color__checkbox label input {
@@ -1978,7 +1978,7 @@ ol {
 	color: #666666;
 	text-transform: uppercase;
 	cursor: pointer;
-	margin-right: 10px;
+	margin-left: 10px;
 	display: inline-block;
 	margin-bottom: 0;
 }
@@ -2040,7 +2040,7 @@ ol {
 }
 
 .nav-item:last-child {
-	margin-right: 0;
+	margin-left: 0;
 }
 
 .nav-item .nav-link {
