--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1629,7 +1629,7 @@ ol {
 .product__details__pic__left {
 	width: 22%;
 	max-height: 574px;
-	float: left;
+	float: right;
 	overflow-y: auto;
 }
 
